# Generated by Django 5.2.7 on 2025-10-20 21:45

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('personas', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='CronogramaGuardias',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('fecha', models.DateField()),
                ('hora_inicio', models.TimeField()),
                ('hora_fin', models.TimeField()),
                ('tipo', models.CharField(blank=True, max_length=40, null=True)),
                ('estado', models.CharField(choices=[('generada', 'Generada'), ('aprobada', 'Aprobada'), ('rechazada', 'Rechazada'), ('publicada', 'Publicada')], default='generada', max_length=30)),
                ('aprobado_en', models.DateTimeField(blank=True, null=True)),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('actualizado_en', models.DateTimeField(auto_now=True)),
                ('actualizado_por', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='cronogramas_actualizados', to=settings.AUTH_USER_MODEL)),
                ('aprobado_por', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='cronogramas_aprobados', to=settings.AUTH_USER_MODEL)),
                ('area', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='personas.area')),
                ('creado_por', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='cronogramas_creados', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Guardia',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('fecha', models.DateField()),
                ('hora_inicio', models.TimeField(blank=True, null=True)),
                ('hora_fin', models.TimeField(blank=True, null=True)),
                ('tipo', models.CharField(blank=True, max_length=40, null=True)),
                ('activa', models.BooleanField(default=False)),
                ('estado', models.CharField(choices=[('borrador', 'Borrador'), ('aprobada', 'Aprobada'), ('publicada', 'Publicada'), ('anulada', 'Anulada')], default='borrador', max_length=20)),
                ('horas_planificadas', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('horas_efectivas', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('observaciones', models.TextField(blank=True, null=True)),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('actualizado_en', models.DateTimeField(auto_now=True)),
                ('actualizado_por', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='guardias_actualizadas', to=settings.AUTH_USER_MODEL)),
                ('creado_por', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='guardias_creadas', to=settings.AUTH_USER_MODEL)),
                ('cronograma', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='guardias.cronogramaguardias')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='guardias_asignadas', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.AddIndex(
            model_name='cronogramaguardias',
            index=models.Index(fields=['area', 'fecha', 'hora_inicio', 'hora_fin'], name='guardias_cr_area_id_0f8699_idx'),
        ),
        migrations.AddConstraint(
            model_name='cronogramaguardias',
            constraint=models.CheckConstraint(condition=models.Q(('hora_fin__gt', models.F('hora_inicio'))), name='hora_fin_mayor_inicio'),
        ),
        migrations.AddConstraint(
            model_name='guardia',
            constraint=models.CheckConstraint(condition=models.Q(models.Q(('hora_fin__isnull', True), ('hora_inicio__isnull', True)), models.Q(('hora_fin__gt', models.F('hora_inicio')), ('hora_fin__isnull', False), ('hora_inicio__isnull', False)), _connector='OR'), name='horas_consistentes'),
        ),
        migrations.AlterUniqueTogether(
            name='guardia',
            unique_together={('cronograma', 'usuario', 'fecha')},
        ),
    ]
